# adk-workspace

./: README.md
flight_agent/: agent.py
flight_agent/.adk/: session.db
geography_assistant/: agent.py
geography_assistant/.adk/: session.db
math_assistant/: agent.py
math_assistant/.adk/: session.db
my_files/: notes.txt
my_first_agent/: agent.py
my_first_agent/.adk/: session.db
research_assistant/: agent.py
research_assistant/.adk/: session.db
tech-signal-sales-brief/: .env.example  .gitignore  Dockerfile.batch  Makefile  README.md  batch_main.py  pyproject.toml
tech-signal-sales-brief/app/: agent.py  fast_api_app.py
tech-signal-sales-brief/app/agents/: cluster_rank_agent.py  signal_scout_agent.py
tech-signal-sales-brief/app/app_utils/: telemetry.py  typing.py
tech-signal-sales-brief/app/schemas/: cluster.py  config.py  signal.py
tech-signal-sales-brief/app/services/: email_sender.py  pdf_generator.py
tech-signal-sales-brief/app/tools/: github_tool.py  pipeline_tools.py  stackexchange_tool.py
tech-signal-sales-brief/config/: schedules.yaml
travel_agent/: agent.py
travel_agent/.adk/: session.db
